[package]
name = "play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
crossterm = "0.27.0"
log = "0.4.20"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
tui-logger = { version = "0.9.6", features = ["ratatui-support"] }
tokio = { version = "1.32.0", features = ["full"] }
